# alex

./: .env.example  .gcloudignore  .gitignore  README.md  cloudbuild.agent.yaml  cloudbuild.service-image.yaml  gameplan.md  gameplan_gcp.md
backend/: index_config.json  package_docker.py  pyproject.toml  real_embeddings.json  real_embeddings.py  sample_embeddings.json  test_embedding.py  test_search.py
backend/api/: Dockerfile  lambda_handler.py  main.py  pyproject.toml
backend/charter/: Dockerfile  agent.py  lambda_handler.py  pyproject.toml  server.py
backend/database/: pyproject.toml  run_migrations.py  seed_data.py  test_data_api.py  verify_database.py
backend/database/src/: client.py  job_progress.py  models.py  openai_tracing.py
backend/ingest/: pyproject.toml
backend/planner/: Dockerfile  agent.py  aurora_config.json  lambda_handler.py  live_smoke_test.py  market.py  observability.py  pyproject.toml  server.py
backend/reporter/: Dockerfile  agent.py  judge.py  lambda_handler.py  pyproject.toml  server.py
backend/researcher/: Dockerfile  db.py  pyproject.toml  server.py  test_db.py
backend/retirement/: Dockerfile  agent.py  lambda_handler.py  pyproject.toml  server.py
backend/scheduler/: lambda_function.py
backend/tagger/: Dockerfile  agent.py  lambda_handler.py  pyproject.toml  server.py
frontend/: next.config.ts
frontend/components/: AnalysisProgressCard.tsx  ErrorBoundary.tsx  Layout.tsx
frontend/lib/: api.ts  config.ts  routes.ts  site-url.ts
frontend/pages/: 404.tsx  500.tsx  _app.tsx  _document.tsx  advisor-team.tsx  analysis.tsx  dashboard.tsx  index.tsx
frontend/styles/: globals.css
guides/: agent_architecture.md  architecture.md  gcp_backend_readiness_review.md
scripts/: deploy.py  destroy.py  resolve_gcp_merge_conflicts.py  verify_frontend_backend.py
terraform/: README.md
terraform/2_sagemaker/: main.tf  outputs.tf  terraform.tfvars.example  variables.tf
terraform/3_ingestion/: main.tf  outputs.tf  terraform.tfvars.example  variables.tf
terraform/4_researcher/: main.tf  outputs.tf  terraform.tfvars.example  variables.tf
terraform/5_database/: main.tf  outputs.tf  terraform.tfvars.example  (+1 more)
(+13 files in other folders)
