[project]
name = "alex-database"
version = "0.1.0"
description = "Database package for Alex Financial Planner with PostgreSQL"
requires-python = ">=3.12"
dependencies = [
    "langfuse==3.3.4",
    "pydantic>=2.11.7",
    "python-dotenv>=1.1.1",
    "sqlalchemy>=2.0.43",
    "psycopg2-binary>=2.9.10",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
