[project]
name = "retirement"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "alex-database",
    "fastapi>=0.116.1",
    "langfuse>=3.3.4",
    "openai-agents[litellm]>=0.2.6",
    "pydantic>=2.11.7",
    "pydantic-ai>=1.0.6",
    "python-dotenv>=1.1.1",
    "tenacity>=9.1.2",
    "uvicorn>=0.35.0",
]

[tool.uv.sources]
alex-database = { path = "../database", editable = true }
